# tsam-notebook-workflows

./: .gitignore  .pre-commit-config.yaml  PLANS.md  README.md  pyproject.toml  quickstart.ipynb
.github/workflows/: ci.yml
data/: Demand_2025_UA_90TWh.csv  Demand_ENTSO_E.csv  hydro_inflow_scaled_2025.csv  hydro_inflow_scaled_deduped_2025.csv  ror_capacity_factors.csv  solar_capacity_factors.csv
examples/: grouped-workflow.yaml
src/: approach_1.ipynb  approach_1_ALL.ipynb  quickstart.ipynb
src/tsam_workflows/: __init__.py  __main__.py  charts.py  cli.py  config.py  data.py  drilldown_dashboard.py  grouped.py
tests/: conftest.py  test_cli_charts.py  test_config.py  test_data.py  test_grouped.py
