[project]
name = "gdu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "nbformat>=5.10.4",
    "pandas>=3.0.1",
    "plotly>=6.7.0",
    "tsam>=3.3.0",
]

[dependency-groups]
dev = [
    "commitizen>=4.16.2",
    "nbmake>=1.5.5",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_scheme = "pep440"
update_changelog_on_bump = true
major_version_zero = true
