[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tsam-notebook-workflows"
version = "0.1.0"
description = "Reusable TSAM notebook workflows and CLI"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "ipykernel>=6.0.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.0.0",
    "nbformat>=5.10.4",
    "notebook>=7.0.0",
    "pandas>=3.0.1",
    "plotly>=6.7.0",
    "tsam>=3.3.0",
]

[project.scripts]
tsam-workflows = "tsam_workflows.cli:main"

[dependency-groups]
commit = [
    "commitizen>=4.16.2",
]
dev = [
    "mypy>=1.11.2",
    "nbmake>=1.5.5",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.13.2",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_scheme = "pep440"
update_changelog_on_bump = true
major_version_zero = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true

[tool.ruff]
line-length = 88

[tool.hatch.build.targets.wheel]
packages = ["src/tsam_workflows"]
